src/objects/Internal_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internal Feedbacks</relationshipLabel>
        <relationshipName>Internal_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Internal Feedbacks</relationshipLabel>
        <relationshipName>Internal_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commerciality__c</fullName>
        <label>​Commerciality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Bad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speed_of_response__c</fullName>
        <label>Speed of response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_for_money__c</fullName>
        <label>Value for money</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Bad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Internal Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Internal Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>